--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ sniffio==1.2.0
 starlette==0.14.2
 typing-extensions==3.10.0.0
 uvicorn==0.13.4
+gunicorn==20.0.4
 uvloop==0.15.2
 watchgod==0.7
 websockets==8.1
